--- a/templates/Gioithieu.html
+++ b/templates/Gioithieu.html
@@ -212,12 +212,13 @@
                       <li><a href="http://127.0.0.1:5500">Home</a></li>
                       <li><a href="http://127.0.0.1:5500/Gioithieu">Introduction</a></li>
                       <li><a href="">Feature</a>
-                        <ul class="sub-menu">
-                            <li><a href="Cam.html">CAMERA</a></li>
-                            <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
-                            <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
-                            <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
-                        </ul>
+                                  <ul class="sub-menu">
+                                  <li><a href="http://127.0.0.1:5500/camera">CAMERA</a></li>
+                                  <li><a href="http://127.0.0.1:5500/use_video">USE VIDEO</a></li>
+                                  <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
+                                  <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
+                                  <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
+                              </ul>  
                       </li>
                       <li><a href="">Contact</a>
                             <ul class="sub-menu">
