--- a/templates/client_video.html
+++ b/templates/client_video.html
@@ -1,20 +1,205 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title style="background-color: green;">Video Upload</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Giới thiệu sản phẩm</title>
     <style>
         body {
-            background-image: linear-gradient(102.7deg, rgb(253, 218, 255) 8.2%, rgb(223, 173, 252) 19.6%, rgb(173, 205, 252) 36.8%, rgb(173, 252, 244) 73.2%, rgb(202, 248, 208) 90.9%);
-            background-size: cover; 
-            background-repeat: no-repeat; 
-            background-attachment: fixed; 
             font-family: Arial, sans-serif;
-            text-align: center;
+            background-image: url('/static/images/image fpt.webp');
+            margin: 0;
+            padding: 0;
         }
+        header {
+            background-image: url('/static/images/image.png'); 
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        .container_1 {
+            max-width: 200%;
+            margin: 0 auto;
+            padding: 40px;
+            background-color: rgba(0,0,0,0.75);
+            box-shadow: 0 0 10px #fff;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        h1,p, li, a {
+            color: #fff; 
+        }
+        h2 {
+            color: rgb(26, 157, 92);
+        }
+        .logo_3 img {
+             max-width: 25%; 
+             height: auto;
+             padding-right: 85%;
+        }
+        .logo_4 img{
+            max-width: 9%;
+            padding-top: 2%;
+        }
+
+        #header_2{
+            background-color: rgba(0, 0, 0, 0.699);
+            justify-content: space-between; 
+            align-items: center; 
+        }
+
+        #main-menu{
+            display: flex;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+
+        }
+
+        #main-menu li{
+            position: relative;
+        }
+
+        #main-menu li a{
+            color: #f8f8f8;
+            display: block;
+            padding: 18px 20px;
+            text-decoration: none;
+        }
+
+        #main-menu ul.sub-menu{
+            position: absolute;
+            background-color:#131921;
+            padding: 15px 0px;
+            list-style: none;
+            width: 200px;
+            border: 1px solid #434343;
+            display: none;
+            left: 50%;
+        }
+
+        #main-menu li:hover>ul.sub-menu{
+            display: block;
+        }
+
+
+        #main-menu ul.sub-menu a{
+            padding: 8px 15px;
+            border-bottom: 1px solid #434343;
+            left: 0;
+        }
+
+        #main-menu{
+            display: flex;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+
+        }
+
+        #main-menu li{
+            position: relative;
+        }
+
+        #main-menu li a{
+            color: #f8f8f8;
+            display: block;
+            padding: 18px 20px;
+            text-decoration: none;
+        }
+
+        #main-menu ul.sub-menu{
+            position: absolute;
+            background-color:#131921;
+            padding: 15px 0px;
+            list-style: none;
+            width: 200px;
+            border: 1px solid #434343;
+            display: none;
+            left: 50%;
+        }
+
+        #main-menu li:hover>ul.sub-menu{
+            display: block;
+        }
+
+
+        #main-menu ul.sub-menu a{
+            padding: 8px 15px;
+            border-bottom: 1px solid #434343;
+            left: 0;
+        }   
+
+        #main-menu ul.sub-menu li:hover>a{
+            border-bottom: 1px solid #5f5f5f;
+        }
+
+        #main-menu ul.sub-menu li:last-child a{
+            border: none;
+        }
+
+        #main-menu>li>a{
+            position: relative;
+        }
+
+        #main-menu>li>a::before{
+            content: "";
+            height: 4px;
+            width: 0px;
+            background: red;
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            transition: 0.25s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+        }
+
+        #main-menu>li:hover>a::before{
+            width: 100%;    
+        }
+
+        #logo{
+            padding: 5px 0px;
+            padding-left: 0%;
+        }
+
+        #logo-img{
+            max-width: 50px;
+            height: auto;
+        }
+
+        nav{
+            display: flex;
+            justify-content: center;
+            justify-items: center;
+            padding: 0;
+        }
+
+        #header{
+            background-color: rgba(0, 0, 0, 0.699);
+            justify-content: space-between; 
+            align-items: center;   
+        }
+
+        #container{
+            max-width: 1000%;
+            margin: 0px auto;
+            margin-bottom: -2%; 
+        }
+
+        h3 {
+            margin-top: 10px;
+            background: rgba(0, 0, 0, 0.699);
+            font-size: 170%;
+        }
+        
         .div-form {
             text-align: center;
             margin-top: 20px;
-            padding-top : 200px;
+            padding-top : 20px;
+            padding-bottom: 200px;
         }
         h3 {
             font-size: 20px;
@@ -27,7 +212,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            flex-direction: column;
           }
           
           .file-drop-area {
@@ -44,23 +228,66 @@
           }
           .file-drop-area.is-active {
             background-color: #1a1a1a;
-          }   
-          
+          }  
+          #submit-btn{
+            margin-top: 45px;
+            height: 60px;
+            width: 13%;
+            border-radius: 21px;
+            background: green;
+            color: white;
+          }
     </style>
 </head>
 <body>
-    <div class="div-form">
-        <form method="post" action="/video" enctype="multipart/form-data" id="upload-form">
-            <h3 style="color: darkblue;">UPLOAD VIDEO</h3>
-            <div class="container">
-            <div class="file-drop-area">
-            <form action="/video" method="post" enctype="multipart/form-data">
-            <input type="file" name="video">
+    <header>
+        <div class="logo_4">    
+            <img src="{{ url_for('static', filename='images/logo web-modified.png') }}" alt="Logo">>
         </div>
+        <h3>SỔ TAY SINH VIÊN ĐIỆN TỬ</h3>
+        <div>
+            <div id="header_2">
+                <nav class="container">
+                    <a href="" id="logo">
+                        <img src="{{ url_for('static', filename='images/plants-clipart-logo-4.png') }}" alt="ảnh logo" id="logo-img">
+                    </a>
+                    <ul id="main-menu">
+                        <li><a href="http://127.0.0.1:5500">Home</a></li>
+                        <li><a href="http://127.0.0.1:5500/Gioithieu">Introduction</a></li>
+                        <li><a href="">Feature</a>
+                          <ul class="sub-menu">
+                              <li><a href="Cam.html">CAMERA</a></li>
+                              <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
+                              <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
+                              <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
+                          </ul>
+                      </li>
+                      <li><a href="">Contact</a>
+                            <ul class="sub-menu">
+                            <li><a href="">0918193133</a></li>  
+                      </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="container_1">
+        <div class="div-form">
+            <form method="post" action="/video" enctype="multipart/form-data" id="upload-form">
+                <h2 style="color: white;">UPLOAD VIDEO</h3>
+                <div class="container">
+                <div class="file-drop-area">
+                <form action="/video" method="post" enctype="multipart/form-data">
+                <input type="file" name="video">
+            </div>
+        </div>
+        <div>
+            <input id="submit-btn" type="submit" value="Upload and Process">
+        </div>
+            </form>
+
+            <h1 style="color: red;" hidden >test</h1>
+            <h2 style="color: red;" hidden>test2</h2>
     </div>
-    <div>
-        <input type="submit" value="Upload and Process">
-    </div>
-        </form>
 </body>
 </html>
